Vistas index y login listas

--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateLogin.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateLogin.cshtml
@@ -26,18 +26,13 @@
                         <form role="form">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                    <input class="form-control" placeholder="Usuario" name="email" type="email" autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                    </label>
-                                </div>
+                                    <input class="form-control" placeholder="Contraseña" name="password" type="password" value="">
+                                </div>                                
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href=@Url.Action("Index", "Home") class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href=@Url.Action("Index", "Home") class="btn btn-lg btn-success btn-block">Iniciar Sesion</a>
                             </fieldset>
                         </form>
                     </div>
