--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -185,7 +185,7 @@
                                     <i class="fa fa-twitter fa-fw"></i> 3 New Followers
                                     <span class="pull-right text-muted small">12 minutes ago</span>
                                 </div>
-                            </a>
+                            </a>multile
                         </li>
                         <li class="divider"></li>
                         <li>
@@ -231,13 +231,6 @@
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
                             <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
@@ -251,8 +244,8 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Inicio</a>
-                        </li>
+                            <a href="index.html"><i class="fa fa-home fa-fw"></i> Inicio</a>
+                        </li>                        
                         <!--
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
@@ -269,13 +262,27 @@
                         -->
 
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Recibos</a>
+                            <a href="tables.html"><i class="fa fa-archive fa-fw"></i>Recibos</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-money fa-fw"></i>Pagos<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="index.html"><i class="fa fa-money fa-fw"></i>Generar pagos</a>
+                                </li>
+                                <li>
+                                    <a href="index.html"><i class="fa fa-check fa-fw"></i>Aprobación de pagos</a>
+                                </li>                                
+                            </ul>
+                            <!-- /.nav-second-level -->
+                        </li>
+                        <li>
+                            <a href="index.html"><i class="fa fa-bar-chart fa-fw"></i>Reportes</a>
                         </li>
                         <!--
                         <li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
-                        </li>
-                        -->
+                        </li>                        
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
@@ -298,8 +305,9 @@
                                     <a href="grid.html">Grid</a>
                                 </li>
                             </ul>
-                            <!-- /.nav-second-level -->
+                            <!-- /.nav-second-level 
                         </li>
+                        
                         <li>
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
@@ -325,19 +333,20 @@
                                             <a href="#">Third Level Item</a>
                                         </li>
                                     </ul>
-                                    <!-- /.nav-third-level -->
+                                    <!-- /.nav-third-level
                                 </li>
                             </ul>
-                            <!-- /.nav-second-level -->
+                            <!-- /.nav-second-level
                         </li>
+                          -->
                         <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-gear fa-fw"></i>Configuración<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="blank.html">Blank Page</a>
+                                    <a href="blank.html"><i class="fa fa-users fa-fw"></i>Administrar Usuarios</a>
                                 </li>
                                 <li>
-                                    <a href="login.html">Login Page</a>
+                                    <a href="login.html"><i class="fa fa-cogs fa-fw"></i>Variables del Sistema</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
