Vistas recibo nomina

--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -231,6 +231,13 @@
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
+                            <center>
+                                <header>Carlos Lozano</header>
+                                <small> Usuario <i style="color:red;">E-0001</i></small>
+                            </center>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
                             <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
@@ -262,16 +269,16 @@
                         -->
 
                         <li>
-                            <a href="tables.html"><i class="fa fa-archive fa-fw"></i>Recibos</a>
+                            <a href="/Pago/TablaPagos"><i class="fa fa-archive fa-fw"></i>Recibos</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-money fa-fw"></i>Pagos<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-book fa-fw"></i>Nomina<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="index.html"><i class="fa fa-money fa-fw"></i>Generar pagos</a>
+                                    <a href="index.html"><i class="fa fa-money fa-fw"></i>Pagar Nomina</a>
                                 </li>
                                 <li>
-                                    <a href="index.html"><i class="fa fa-check fa-fw"></i>Aprobación de pagos</a>
+                                    <a href="index.html"><i class="fa fa-check fa-fw"></i>Aprobar Nomina</a>
                                 </li>                                
                             </ul>
                             <!-- /.nav-second-level -->
@@ -357,15 +364,18 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
-
+        
         <div id="page-wrapper">
+            @RenderBody()
+            
+            <!--
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Dashboard</h1>
                 </div>
-                <!-- /.col-lg-12 -->
+                <!-- /.col-lg-12 
             </div>
-            <!-- /.row -->
+            <!-- /.row 
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="panel panel-primary">
@@ -456,7 +466,7 @@
                     </div>
                 </div>
             </div>
-            <!-- /.row -->
+            <!-- /.row 
             <div class="row">
                 <div class="col-lg-8">
                     <div class="panel panel-default">
@@ -486,13 +496,13 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /.panel-heading -->
+                        <!-- /.panel-heading 
                         <div class="panel-body">
                             <div id="morris-area-chart"></div>
                         </div>
-                        <!-- /.panel-body -->
+                        <!-- /.panel-body 
                     </div>
-                    <!-- /.panel -->
+                    <!-- /.panel 
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-bar-chart-o fa-fw"></i> Bar Chart Example
@@ -520,7 +530,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /.panel-heading -->
+                        <!-- /.panel-heading 
                         <div class="panel-body">
                             <div class="row">
                                 <div class="col-lg-4">
@@ -586,24 +596,24 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <!-- /.table-responsive -->
+                                    <!-- /.table-responsive 
                                 </div>
-                                <!-- /.col-lg-4 (nested) -->
+                                <!-- /.col-lg-4 (nested) 
                                 <div class="col-lg-8">
                                     <div id="morris-bar-chart"></div>
                                 </div>
-                                <!-- /.col-lg-8 (nested) -->
+                                <!-- /.col-lg-8 (nested) 
                             </div>
-                            <!-- /.row -->
+                            <!-- /.row 
                         </div>
-                        <!-- /.panel-body -->
+                        <!-- /.panel-body 
                     </div>
-                    <!-- /.panel -->
+                    <!-- /.panel 
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-clock-o fa-fw"></i> Responsive Timeline
                         </div>
-                        <!-- /.panel-heading -->
+                        <!-- /.panel-heading 
                         <div class="panel-body">
                             <ul class="timeline">
                                 <li>
@@ -718,17 +728,17 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- /.panel-body -->
+                        <!-- /.panel-body 
                     </div>
-                    <!-- /.panel -->
+                    <!-- /.panel 
                 </div>
-                <!-- /.col-lg-8 -->
+                <!-- /.col-lg-8 
                 <div class="col-lg-4">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-bell fa-fw"></i> Notifications Panel
                         </div>
-                        <!-- /.panel-heading -->
+                        <!-- /.panel-heading 
                         <div class="panel-body">
                             <div class="list-group">
                                 <a href="#" class="list-group-item">
@@ -786,12 +796,12 @@
                                     </span>
                                 </a>
                             </div>
-                            <!-- /.list-group -->
+                            <!-- /.list-group 
                             <a href="#" class="btn btn-default btn-block">View All Alerts</a>
                         </div>
-                        <!-- /.panel-body -->
+                        <!-- /.panel-body 
                     </div>
-                    <!-- /.panel -->
+                    <!-- /.panel 
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-bar-chart-o fa-fw"></i> Donut Chart Example
@@ -800,9 +810,9 @@
                             <div id="morris-donut-chart"></div>
                             <a href="#" class="btn btn-default btn-block">View Details</a>
                         </div>
-                        <!-- /.panel-body -->
+                        <!-- /.panel-body 
                     </div>
-                    <!-- /.panel -->
+                    <!-- /.panel 
                     <div class="chat-panel panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-comments fa-fw"></i> Chat
@@ -840,7 +850,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <!-- /.panel-heading -->
+                        <!-- /.panel-heading 
                         <div class="panel-body">
                             <ul class="chat">
                                 <li class="left clearfix">
@@ -909,7 +919,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- /.panel-body -->
+                        <!-- /.panel-body 
                         <div class="panel-footer">
                             <div class="input-group">
                                 <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
@@ -920,16 +930,15 @@
                                 </span>
                             </div>
                         </div>
-                        <!-- /.panel-footer -->
+                        <!-- /.panel-footer 
                     </div>
-                    <!-- /.panel .chat-panel -->
+                    <!-- /.panel .chat-panel 
                 </div>
-                <!-- /.col-lg-4 -->
+                <!-- /.col-lg-4 
             </div>
-            <!-- /.row -->
-        </div>
+            <!-- /.row         
         <!-- /#page-wrapper -->
-
+        </div>
     </div>
     <!-- /#wrapper -->
     <!-- jQuery -->
@@ -948,7 +957,7 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../Content/dist/js/sb-admin-2.js"></script>
-    @RenderBody()
+    
 </body>
 
 </html>
