Vista de Registrar Usuario y Tablas de usuarios

--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -350,7 +350,7 @@
                             <a href="#"><i class="fa fa-gear fa-fw"></i>Configuración<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="blank.html"><i class="fa fa-users fa-fw"></i>Administrar Usuarios</a>
+                                    <a href="/Configuration/TablaUsuarios"><i class="fa fa-users fa-fw"></i>Administrar Usuarios</a>
                                 </li>
                                 <li>
                                     <a href="login.html"><i class="fa fa-cogs fa-fw"></i>Variables del Sistema</a>
