--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Templates/_TemplateIndex.cshtml";
 }
 
-
+@ViewBag.Message;
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
@@ -12,7 +12,7 @@
         </div>
 
         <div class="col-lg-12">
-            <form role="form">
+            <form role="form" action="/Configuration/RegistroUsuario" method="post">
                 <fieldset>
                     <div class="form-group row">
                         <div class="col-xs-5">
