--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
@@ -7,10 +7,18 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Usuarios</h1>
+        <h1 class="page-header">Usuarios</h1>   
+       
     </div>
     <!-- /.col-lg-12 -->
 </div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <a  href="/Configuration/RegistroUsuario" class="btn btn-success boton-tabla pull-right">Agregar</a>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
