--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -276,10 +276,10 @@
                             <a href="#"><i class="fa fa-book fa-fw"></i>Nomina<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="index.html"><i class="fa fa-money fa-fw"></i>Pagar Nomina</a>
+                                    <a href="/Pago/PagoNomina"><i class="fa fa-money fa-fw"></i>Pagar Nomina</a>
                                 </li>
                                 <li>
-                                    <a href="index.html"><i class="fa fa-check fa-fw"></i>Aprobar Nomina</a>
+                                    <a href="/Pago/AprobarNomina"><i class="fa fa-check fa-fw"></i>Aprobar Nomina</a>
                                 </li>                                
                             </ul>
                             <!-- /.nav-second-level -->
@@ -958,7 +958,7 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../Content/dist/js/sb-admin-2.js"></script>
-    
+    <script src="../Content/js/appscript.js"></script>
 </body>
 
 </html>
