--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -4,7 +4,6 @@
     Layout = "~/Views/Templates/_TemplateIndex.cshtml";
 }
 
-@ViewBag.Message;
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
@@ -138,7 +137,20 @@
                         </div>
 
                     </div>
+                   
+                    <div class="col-lg-12">
+                        <h2> Cargas</h2><button type="button" onclick="addTr()" class="btn btn-success" >Agregar</button>
+                        <table class="table table-striped table-bordered table-hover" id="tablaCargas">
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Apellido</th>
+                                <th>C.I</th>
+                                <th>Sexo</th>
+                                <th>Fecha De Nacimiento</th>
+                            </tr>
 
+                        </table>
+                    </div>
 
                     <!-- Change this to a button or input when using this as a form -->
 
@@ -147,6 +159,7 @@
                         <button type="reset" class="btn btn-danger">Cancelar</button>
                     </div>
 
+                   
                 </fieldset>
             </form>
         </div>
