--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/TablaPagos.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/TablaPagos.cshtml
@@ -24,7 +24,7 @@
                             <th>Código de empleado</th>
                             <th>Nombre</th>
                             <th>Fecha</th>
-                            <th>Estatus</th>
+                            <th>Confirmación</th>
                             <th>Opciones</th>
                         </tr>
                     </thead>
@@ -33,11 +33,11 @@
                             <td>0001</td>
                             <td>José Rodríguez</td>
                             <td>05/05/2017</td>
-                            <td class="center">Aprobado</td>
-                            <td >
+                            <td class="center">Confirmado</td>
+                            <td>
                                 <center>
                                     <a href="detalle.html" title="Ver Pago"><span class="fa fa-search fa-fw" aria-hidden="true"></span></a>
-                                    <a href="" title="Aprobar Pago"><span style="color: green;" class="fa fa-check fa-fw" aria-hidden="true"></span></a>
+                                    <a href="" title="Confirmar"><span style="color: green;" class="fa fa-check fa-fw" aria-hidden="true"></span></a>
                                 </center>
                             </td>
                         </tr>
@@ -45,11 +45,11 @@
                             <td>0001</td>
                             <td>José Rodríguez</td>
                             <td>05/05/2017</td>
-                            <td class="center">Aprobado</td>
+                            <td class="center">Confirmado</td>
                             <td>
                                 <center>
                                     <a href="detalle.html" title="Ver Pago"><span class="fa fa-search fa-fw" aria-hidden="true"></span></a>
-                                    <a href="" title="Aprobar Pago"><span style="color: green;" class="fa fa-check fa-fw" aria-hidden="true"></span></a>
+                                    <a href="" title="Confirmar"><span style="color: green;" class="fa fa-check fa-fw" aria-hidden="true"></span></a>
                                 </center>
                             </td>
                         </tr>
