--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -273,15 +273,8 @@
                             <a href="/Pago/TablaPagos"><i class="fa fa-archive fa-fw"></i>Recibos</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-book fa-fw"></i>Nomina<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="/Pago/PagoNomina"><i class="fa fa-money fa-fw"></i>Pagar Nomina</a>
-                                </li>
-                                <li>
-                                    <a href="/Pago/AprobarNomina"><i class="fa fa-check fa-fw"></i>Aprobar Nomina</a>
-                                </li>                                
-                            </ul>
+                            <a href="/Pago/ListaNomina"><i class="fa fa-book fa-fw"></i>Nomina</a>
+                         
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
