--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -138,8 +138,8 @@
 
                     </div>
                    
-                    <div class="col-lg-12">
-                        <h2> Cargas</h2><button type="button" onclick="addTr()" class="btn btn-success" >Agregar</button>
+                    <div class="col-lg-15">
+                        <h2> Cargas</h2><button type="button" onclick="addTr()" class="btn btn-success boton-tabla" >Agregar</button>
                         <table class="table table-striped table-bordered table-hover" id="tablaCargas">
                             <tr>
                                 <th>Nombre</th>
