--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
@@ -4,4 +4,70 @@
     Layout = "~/Views/Templates/_TemplateIndex.cshtml";
 }
 
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Nueva Nomina</h1>
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+<div class="row">
+    <div class="col-lg-12">
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                    <thead>
+                        <tr>
+                            <th>Código de empleado</th>
+                            <th>Nombre</th>
+                            <th>Sueldo Base</th>
+                            <th>Retroactivos</th>
+                            <th>Retenciones</th>
+                            <th>Cargas</th>
+                            <th>Neto a pagar</th>
+                            <th>Detalle</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="odd gradeX">                            
+                            <td>0001</td>
+                            <td>José Rodríguez</td>
+                            <td><span style="color: green">25.000,00</span></td>
+                            <td><span style="color: green">2.543,18</span></td>
+                            <td ><span style="color: red">- 3.456,27</span></td>
+                            <td >0</td>
+                            <td><span style="color: green">24.086,91</span></td>
+                            <td>
+                                <center>
+                                    <a href="detalle.html" title="Editar"><span class="fa fa-search fa-fw" aria-hidden="true"></span></a>
+                                    
+                                </center>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
+                <div>
+                    <div class="col-md-offset-6 col-md-6">
+                        <h3>Total Nomina: <strong>24.086,91</strong></h3>
+                    </div>
+                </div>
+
+                <div class="row">                    
+                    <div class="col-md-offset-6 col-md-6">
+                        <button class="btn btn-success pull-right">Pagar</button>
+                    </div>                    
+                </div>
+                <!-- /.table-responsive
+                <div class="well">
+                    <h4>DataTables Usage Information</h4>
+                    <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
+                    <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+                </div>
+                -->
+            </div>        
+        <!-- /.panel-body -->
+    </div>
+    <!-- /.panel -->
+</div>
+
 
