--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -13,13 +13,20 @@
         <div class="col-lg-12">
             <form role="form" action="/Configuration/RegistroUsuario" method="post">
                 <fieldset>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <h2 class="page-header header-azul">Datos Personales</h2>
+                        </div>
+                    </div>
+                    
                     <div class="form-group row">
                         <div class="col-xs-5">
-                            <label for="nombre">Nombres</label>
+                            
+                            <label for="nombre">Nombre</label>
                             <input id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus>
                         </div>
                         <div class="col-xs-5">
-                            <label for="apellido">Apellidos</label>
+                            <label for="apellido">Apellido</label>
                             <input id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus>
                         </div>
                     </div>
@@ -29,7 +36,7 @@
                             <label for="fechanac">Fecha de Nacimiento</label>
                             <input id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control">
                         </div>
-
+                       
                         <label class="radio-inline"><input type="radio" name="optradio">Masculino</label>
 
 
@@ -109,6 +116,7 @@
 
                     <div class="form-group row">
                         <div class="col-xs-5">
+                            <h2 class="page-header">Usuario</h2>
                             <label for="email">Usuario</label>
                             <input id="email" class="form-control" name="email" type="text" autofocus>
                         </div>
@@ -137,9 +145,14 @@
                         </div>
 
                     </div>
-                   
+                   <div class="row">
+                       <div class="col-xs-5">
+                           <h2 class="page-header"> Cargas</h2>
+                       </div>
+                   </div>
                     <div class="col-lg-15">
-                        <h2> Cargas</h2><button type="button" onclick="addTr()" class="btn btn-success boton-tabla" >Agregar</button>
+                       
+                        <button type="button" onclick="addTr()" class="btn btn-success boton-tabla" >Agregar</button>
                         <table class="table table-striped table-bordered table-hover" id="tablaCargas">
                             <tr>
                                 <th>Nombre</th>
