--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/PagoNomina.cshtml
@@ -53,7 +53,7 @@
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-								<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+								<h3 class="modal-title" id="myModalLabel">Detalle</h3>
 							</div>
 							<div class="modal-body">
 								<form role="form" action="/Configuration/RegistroUsuario" method="post">
@@ -72,7 +72,7 @@
 											</div>
 										</div>
 												
-												<h3 class="page-header header-modal">Retenciones</h3>
+												<h4 class="page-header header-modal">Retenciones</h4>
 										<div class="col-md-6">
 											<label for="sso">S.S.O</label>
 											<input id="sso" class="form-control" readonly/>
@@ -89,7 +89,7 @@
 											<label for="islr">I.S.L.R</label>
 											<input id="islr" class="form-control" readonly/>
 										</div>
-										<h3 class="page-header header-modal">Aportes</h3>
+										<h4 class="page-header header-modal">Aportes</h4>
 										<div class="col-md-6">
 											<label for="abv">Alic. Bono Vacacional</label>
 											<input id="abv" class="form-control" readonly/>
@@ -115,8 +115,8 @@
 								</form>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-								<button type="button" class="btn btn-primary">Save changes</button>
+								<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+
 							</div>
 						</div>
 						<!-- /.modal-content -->
