--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Login/Login.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Login/Login.cshtml
@@ -1,13 +1,39 @@
-﻿
+﻿@model Usuario
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/templates/_TemplateLogin.cshtml";
 }
 
 
-<ul>
-    @for (int i = 0; i < ViewBag.NumTimes; i++)
-    {
-        <li>@ViewBag.Message</li>
-    }
-</ul>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 back" style="">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <center><img style="width: 80%;" src="..\Content\images\dvclogo.png"></center>
+                </div>
+                <div class="panel-body">
+
+
+                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+                        {    
+                            @Html.AntiForgeryToken()
+                        <fieldset>
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            <div class="form-group">
+                               @Html.TextBoxFor(usuarioLogin=>usuarioLogin.username , new { @class = "form-control" ,@placeholder="Usuario",@name="email",@type="email" })
+                               @Html.ValidationMessageFor(usuarioLogin => usuarioLogin.username, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="form-group">
+                                @Html.TextBoxFor(usuarioLogin => usuarioLogin.clave, new { @class="form-control",@plaholder="Contraseña",@name="password",@type="password",value=""})
+                                @Html.ValidationMessageFor(usuarioLogin => usuarioLogin.username, "", new { @class = "text-danger" })
+                            </div>
+                            <!-- Change this to a button or input when using this as a form -->
+                            <a href=@Url.Action("Index", "Home") class="btn btn-lg btn-success btn-block">Iniciar Sesion</a>
+                        </fieldset>
+                        }       
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
