--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Home/Index.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/templates/_TemplateIndex.cshtml";
 }
-
+<h1>@ViewBag.Message</h1>
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">Inicio</h1>
