--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Login/Login.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Login/Login.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/templates/_TemplateLogin.cshtml";
 }
 
-
+<h1>@ViewBag.Message</h1>
 <div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4 back" style="">
@@ -15,21 +15,21 @@
                 <div class="panel-body">
 
 
-                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+                        @using (Html.BeginForm())
                         {    
                             @Html.AntiForgeryToken()
                         <fieldset>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="form-group">
-                               @Html.TextBoxFor(usuarioLogin=>usuarioLogin.username , new { @class = "form-control" ,@placeholder="Usuario",@name="email",@type="email" })
+                               @Html.TextBoxFor(usuarioLogin=>usuarioLogin.username , new { @class = "form-control" ,@placeholder="Usuario",@type="email" })
                                @Html.ValidationMessageFor(usuarioLogin => usuarioLogin.username, "", new { @class = "text-danger" })
                             </div>
                             <div class="form-group">
-                                @Html.TextBoxFor(usuarioLogin => usuarioLogin.clave, new { @class="form-control",@plaholder="Contraseña",@name="password",@type="password",value=""})
-                                @Html.ValidationMessageFor(usuarioLogin => usuarioLogin.username, "", new { @class = "text-danger" })
+                                @Html.TextBoxFor(usuarioLogin => usuarioLogin.clave, new { @class="form-control",@plaholder="Contraseña",@type="password"})
+                                @Html.ValidationMessageFor(usuarioLogin => usuarioLogin.clave, "", new { @class = "text-danger" })
                             </div>
                             <!-- Change this to a button or input when using this as a form -->
-                            <a href=@Url.Action("Index", "Home") class="btn btn-lg btn-success btn-block">Iniciar Sesion</a>
+                            <a href=@Url.Action("Login", "Login") class="btn btn-lg btn-success btn-block">Iniciar Sesion</a>
                         </fieldset>
                         }       
                 </div>
