--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -1,5 +1,4 @@
-﻿@model ViewModel
-@{
+﻿@{
     ViewBag.Title = "RegistroUsuario";
     Layout = "~/Views/Templates/_TemplateIndex.cshtml";
 }
@@ -20,14 +19,19 @@
                     </div>
                     
                     <div class="form-group row">
-                        <div class="col-xs-5">
+                        <div class="col-xs-4">
                             
                             <label for="nombre">Nombre</label>
                             <input id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus>
                         </div>
-                        <div class="col-xs-5">
+                        <div class="col-xs-4">
                             <label for="apellido">Apellido</label>
                             <input id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus>
+                        </div>
+
+                        <div class="col-xs-4">
+                            <label for="cedula">Cedula</label>
+                            <input name="cedula" class="form-control" placeholder="Ej:00000000" type="text" autofocus/>
                         </div>
                     </div>
 
@@ -37,10 +41,10 @@
                             <input id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control">
                         </div>
                        
-                        <label class="radio-inline"><input type="radio" name="optradio">Masculino</label>
+                        <label class="radio-inline"><input type="radio" name="sexo" value="M">Masculino</label>
 
 
-                        <label class="radio-inline"><input type="radio" name="optradio">Femenino</label>
+                        <label class="radio-inline"><input type="radio" name="sexo" value="F">Femenino</label>
                     </div>
 
 
@@ -117,15 +121,15 @@
                     <div class="form-group row">
                         <div class="col-xs-5">
                             <h2 class="page-header">Usuario</h2>
-                            <label for="email">Usuario</label>
-                            <input id="email" class="form-control" name="email" type="text" autofocus>
+                            <label for="usuario">Usuario</label>
+                            <input id="usuario" class="form-control" name="usuario" type="text" autofocus>
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-xs-5">
                             <label for="psw">Clave</label>
-                            <input id="psw" class="form-control" name="psw" type="password" autofocus>
+                            <input id="clave" class="form-control" name="clave" type="password" autofocus>
                         </div>
                     </div>
 
@@ -141,7 +145,7 @@
                         </div>
                         <div class="col-xs-3">
                             <label for="sueldo">Sueldo</label>
-                            <input type="text" id="sueldo" class="form-control">
+                            <input type="text" id="sueldo" name="sueldo" class="form-control">
                         </div>
 
                     </div>
@@ -168,7 +172,7 @@
                     <!-- Change this to a button or input when using this as a form -->
 
                     <div class="col-lg-15">
-                        <button type="submit" class="btn btn-success">Registrar</button>
+                        <input type="submit" class="btn btn-success" value="Registrar">
                         <button type="reset" class="btn btn-danger">Cancelar</button>
                     </div>
 
