--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -23,27 +23,27 @@
                         <div class="col-xs-4">
                             
                             <label for="nombre">Nombre</label>
-                            <input id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus>
+                            <input required id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus>
                         </div>
                         <div class="col-xs-4">
                             <label for="apellido">Apellido</label>
-                            <input id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus>
+                            <input required id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus>
                         </div>
 
                         <div class="col-xs-4">
                             <label for="cedula">Cedula</label>
-                            <input name="cedula" class="form-control" placeholder="Ej:00000000" type="text" autofocus/>
+                            <input required name="cedula" class="form-control" placeholder="Ej:00000000" type="text" autofocus/>
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-xs-3">
                             <label for="fechanac">Fecha de Nacimiento</label>
-                            <input id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control">
+                            <input required id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control">
                         </div>
                        <div class="col-xs-3">
-                        <label class="radio-inline"><input type="radio" name="sexo" value="M">Masculino</label>
-                        <label class="radio-inline"><input type="radio" name="sexo" value="F">Femenino</label>
+                        <label class="radio-inline"><input  required type="radio" name="sexo" value="M">Masculino</label>
+                        <label class="radio-inline"><input required type="radio" name="sexo" value="F">Femenino</label>
                         </div>
                     </div>
 
@@ -63,15 +63,15 @@
                         </div>
                         <div class="col-xs-3">
                             <label for="ciudad">Ciudad</label>
-                            <input class="form-control" id="ciudad" name="ciudad" type="text">
+                            <input required class="form-control" id="ciudad" name="ciudad" type="text" >
                         </div>
                         <div class="col-xs-3">
                             <label for="calle">Calle</label>
-                            <input class="form-control" id="calle" name="calle" type="text">
+                            <input required class="form-control" id="calle" name="calle" type="text">
                         </div>
                         <div class="col-xs-3">
                             <label for="casa">Casa/Apto</label>
-                            <input class="form-control" id="casa" name="calle" type="text">
+                            <input required class="form-control" id="casa" name="casa" type="text">
                         </div>
                     </div>
 
@@ -87,13 +87,13 @@
 
                     <div class="form-group">
                         <label for="dir">Direccion</label>
-                        <textarea id="dir" class="form-control" col="5" rows="5"></textarea>
+                        <textarea id="dir" class="form-control" name="direccion" col="5" rows="5"></textarea>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-xs-5">
                             <label for="email">E-mail</label>
-                            <input id="email" class="form-control" placeholder="ejemplo@dvc.com" name="email" type="email" autofocus>
+                            <input required id="email" class="form-control" placeholder="ejemplo@dvc.com" name="email" type="email" autofocus>
                         </div>
                     </div>
 
@@ -101,14 +101,14 @@
                         <div class="col-xs-5">
                             <h2 class="page-header">Usuario</h2>
                             <label for="usuario">Usuario</label>
-                            <input id="usuario" class="form-control" name="usuario" type="text" autofocus>
+                            <input required id="usuario" class="form-control" name="usuario" type="text" autofocus>
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-xs-5">
                             <label for="psw">Clave</label>
-                            <input id="clave" class="form-control" name="clave" type="password" autofocus>
+                            <input required id="clave" class="form-control" name="clave" type="password" autofocus>
                         </div>
                     </div>
 
@@ -124,7 +124,7 @@
                             </select>
                         </div>
                         <div class="col-xs-3">
-                            <label for="sueldo">Sueldo</label>
+                            <label required for="sueldo">Sueldo</label>
                             <input type="text" id="sueldo" name="sueldo" class="form-control">
                         </div>
 
