--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Login/Login.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Login/Login.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/templates/_TemplateLogin.cshtml";
 }
 
-<h1>@ViewBag.Message</h1>
+
 <div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4 back" style="">
@@ -21,15 +21,14 @@
                         <fieldset>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="form-group">
-                               @Html.TextBoxFor(usuarioLogin=>usuarioLogin.usuario , new { @class = "form-control" ,@placeholder="Usuario",@type="email" })
-                               @Html.ValidationMessageFor(usuarioLogin => usuarioLogin.usuario, "", new { @class = "text-danger" })
+                                <input class="form-control" name="usuario" id="usuario" placeholder="Usuario" type="text" required/>
                             </div>
                             <div class="form-group">
-                                @Html.TextBoxFor(usuarioLogin => usuarioLogin.clave, new { @class="form-control",@plaholder="Contraseña",@type="password"})
-                                @Html.ValidationMessageFor(usuarioLogin => usuarioLogin.clave, "", new { @class = "text-danger" })
+                                <input class="form-control"  name="clave" id="clave"   placeholder="Contraseña" type="password" required/>
                             </div>
                             <!-- Change this to a button or input when using this as a form -->
-                            <a href=@Url.Action("Login", "Login") class="btn btn-lg btn-success btn-block">Iniciar Sesion</a>
+                            <h3 style="text-align:center;color:red;">@ViewBag.Message</h3>
+                            <input type="submit" class="btn btn-lg btn-success btn-block" value="Iniciar Sesion">
                         </fieldset>
                         }       
                 </div>
