--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -134,7 +134,7 @@
                            <h2 class="page-header"> Cargas</h2>
                        </div>
                    </div>
-                    <div class="col-lg-15">
+                    <div class="col-lg-12">
                        
                         <button type="button" onclick="addTr()" class="btn btn-success boton-tabla" >Agregar</button>
                         <table class="table table-striped table-bordered table-hover" id="tablaCargas">
@@ -144,8 +144,8 @@
                                 <th>C.I</th>
                                 <th>Sexo</th>
                                 <th>Fecha De Nacimiento</th>
+                                <th>Monto</th>
                             </tr>
-
                         </table>
                     </div>
 
