DEJA LA LADILLA MAMAGUEVO INUTIL

--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -233,11 +233,7 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li>
                             <center>
-                                <header>@Usuario.GetUsuarioNombres(Session["usuario"].ToString())</header>
-                                <small> Usuario <i style="color:red;">@if (Session["usuario"] != null)
-                                {@Session["usuario"].ToString()  }</i></small>
-                               <!-- <header>Carlos Lozano</header>
-                                <small> Usuario <i style="color:red;">E-0001</i></small>-->
+                                <!--AQUI VA EL README-->
                             </center>
                         </li>
                         <li class="divider"></li>
