--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -155,7 +155,7 @@
                         <input type="submit" class="btn btn-success" value="Registrar">
                         <button type="reset" class="btn btn-danger">Cancelar</button>
                     </div>
-
+                    <input type="hidden" name="numfilas" id="numfilas"/>
                    
                 </fieldset>
             </form>
